# ReaTC

./: .gitignore  .mise.toml  ABOUT.md  BUILD.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  Makefile  PLAN-UI-ENHANCEMENTS.md  README.md  REPORT.md  TODO.md  config.ld  index.xml  issues.md  setup.py
.github/: FUNDING.yml
.github/workflows/: check.yml  release.yml  unpublish.yml
Timecode/: reaper_reatc-arm64.dylib  reaper_reatc-x86_64.dylib  reatc.lua  reatc_artnet.py  reatc_core.lua  reatc_ltc_diag.jsfx  reatc_ltcgen.py  reatc_osc.py  reatc_outputs.lua  reatc_regions_to_ltc.lua  reatc_tc.jsfx  reatc_ui.lua
docs/: architechture.mmd  architecture.mmd
images/: index.md
src/Effects/ReaTC/: reatc_ltc.jsfx  reatc_ltc_diag.jsfx  reatc_mtc.jsfx  reatc_tc.jsfx
src/Scripts/ReaTC/: ReaTC.lua  reatc.lua  reatc_artnet.py  reatc_bake.lua  reatc_core.lua  reatc_ltc.lua  reatc_ltc_gen.lua  reatc_ltcgen.py  reatc_ltcout.py  reatc_mtc.lua  reatc_mtc.py  reatc_netdiscover.py  reatc_osc.py  reatc_outputs.lua  reatc_regions_to_ltc.lua  reatc_udp.py  reatc_ui.lua
src/extension/: CMakeLists.txt  reaper_plugin.h  reaper_reatc.cpp
tests/: conftest.py  test_artnet.py  test_build.py  test_ltcgen.py  test_osc.py
